Fix toggle appearance on iOS
#1808

--- a/www/kanban/app-kanban.less
+++ b/www/kanban/app-kanban.less
@@ -539,6 +539,8 @@
                 border: 0;
                 height: 30px;
                 width: 30px;
+                margin: 0;
+                padding: 1px 4px;
                 line-height: 30px;
                 text-align: center;
                 display: inline-block;
